--- a/index.html
+++ b/index.html
@@ -8,83 +8,98 @@
         <link rel="stylesheet" href="styles.css">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400..900&display=swap" rel="stylesheet">
-        <link href="https://fonts.googleapis.com/css2?family=Mukta:wght@200;300;400;500;600;700;800&display=swap" rel="stylesheet">
-        <meta name="description" content="Découvrez Les Justes de Saint-Maur, un hommage aux héros locaux qui ont sauvé des vies pendant la Seconde Guerre mondiale. Au cours de notre travail, nous nous sommes rendus compte que les Justes sont assez peu connus du grand public, contrairement aux Résistants. Nous nous sommes interrogés sur cette situation et nous avons cherché à la comprendre.">
-        <title>Les Justes nos voisins</title>
+        <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&display=swap" rel="stylesheet">
+        <meta name="description" content="Découvrer la carte de Saint-Maur">
+        <title>Carte des rues de Saint-Maur</title>
     </head>
-    <div class="progress-bar scroll"></div>
     <body>
-        <section class="fond-bleu sect blanc">
-            <section class="sous-sect">
-                <div class="centrage titre ">
-                    <h2 class="title-animation">???</h2>
-                </div>
-                <div class="centrage">
-                    <div class="carte-outer-container">
-                        <div class="carte-container">
-                            <img src="images/carte.png" alt="carte de deux familles de Justes" class="carte-img">
-                            <div class="marker-container" id="marker-container-emmanuelli" data-family="emmanuelli">
-                                <img src="images/marker.png" alt="Marker Emmanuelli" class="marker">
-                            </div>
-                            <div class="marker-container" id="marker-container-perret" data-family="perret">
-                                <img src="images/marker.png" alt="Marker Perret" class="marker">
-                            </div>
+        <section class="sous-sect">
+            <div class="titre">
+                <h2>Les rues de Saint-Maur en l'honneur des héros de la Seconde Guerre Mondiale </h2>
+            </div>
+            <div>
+                <div class="carte-outer-container">
+                    <div class="carte-container">
+                        <img src="images/carte.png" alt="carte des quartiers de Saint-Maur" class="carte-img">
+                        <div class="marker-container" id="marker-container-lavarenne" data-family="lavarenne">
+                            <img src="images/marker.png" alt="Marker la Varenne" class="marker">
                         </div>
-                        <div class="famille-info" id="info-emmanuelli">
-                            <h3>Famille Emmanuelli</h3>
-                            <img src="images/famille_emmanuelli.webp" alt="Famille Emmanuelli" class="famille-img">
-                            <p>Découvrez l'histoire inspirante de la famille Emmanuelli...</p>
-                            <a href="les-Justes/famille-emmanuelli" class="btn-decouvrir">Cliquez pour découvrir leur histoire</a>
+                        <div class="marker-container" id="marker-container-leparcsm" data-family="leparcsm">
+                            <img src="images/marker.png" alt="Marker Le Parc" class="marker">
                         </div>
-                        <div class="famille-info" id="info-emmanuelli">
-                            <h3>Famille Emmanuelli</h3>
-                            <img src="images/famille_emmanuelli.webp" alt="Famille Emmanuelli" class="famille-img">
-                            <p>Découvrez l'histoire inspirante de la famille Emmanuelli...</p>
-                            <a href="les-Justes/famille-emmanuelli" class="btn-decouvrir">Cliquez pour découvrir leur histoire</a>
+                        <div class="marker-container" id="marker-container-vieuxsm" data-family="vieuxsm">
+                            <img src="images/marker.png" alt="Marker Vieux Saint-Maur" class="marker">
                         </div>
-                        <div class="famille-info" id="info-emmanuelli">
-                            <h3>Famille Emmanuelli</h3>
-                            <img src="images/famille_emmanuelli.webp" alt="Famille Emmanuelli" class="famille-img">
-                            <p>Découvrez l'histoire inspirante de la famille Emmanuelli...</p>
-                            <a href="les-Justes/famille-emmanuelli" class="btn-decouvrir">Cliquez pour découvrir leur histoire</a>
+                        <div class="marker-container" id="marker-container-champignol" data-family="champignol">
+                            <img src="images/marker.png" alt="Marker Champignol" class="marker">
                         </div>
-                        <div class="famille-info" id="info-perret">
-                            <h3>Famille Perret</h3>
-                            <img src="images/famille_perret.webp" alt="Famille Perret" class="famille-img">
-                            <p>Plongez dans le parcours remarquable de la famille Perret...</p>
-                            <a href="les-Justes/famille-perret" class="btn-decouvrir">Cliquez pour découvrir leur histoire</a>
+                        <div class="marker-container" id="marker-container-smcreteil" data-family="smcreteil">
+                            <img src="images/marker.png" alt="Marker Saint-Maur Créteil" class="marker">
                         </div>
-                        <div class="famille-info" id="info-emmanuelli">
-                            <h3>Famille Emmanuelli</h3>
-                            <img src="images/famille_emmanuelli.webp" alt="Famille Emmanuelli" class="famille-img">
-                            <p>Découvrez l'histoire inspirante de la famille Emmanuelli...</p>
-                            <a href="les-Justes/famille-emmanuelli" class="btn-decouvrir">Cliquez pour découvrir leur histoire</a>
+                        <div class="marker-container" id="marker-container-adamville" data-family="adamville">
+                            <img src="images/marker.png" alt="Marker Adamville" class="marker">
                         </div>
-                        <div class="famille-info" id="info-emmanuelli">
-                            <h3>Famille Emmanuelli</h3>
-                            <img src="images/famille_emmanuelli.webp" alt="Famille Emmanuelli" class="famille-img">
-                            <p>Découvrez l'histoire inspirante de la famille Emmanuelli...</p>
-                            <a href="les-Justes/famille-emmanuelli" class="btn-decouvrir">Cliquez pour découvrir leur histoire</a>
+                        <div class="marker-container" id="marker-container-lapie" data-family="lapie">
+                            <img src="images/marker.png" alt="Marker La Pie" class="marker">
                         </div>
-                        <div class="famille-info" id="info-emmanuelli">
-                            <h3>Famille Emmanuelli</h3>
-                            <img src="images/famille_emmanuelli.webp" alt="Famille Emmanuelli" class="famille-img">
-                            <p>Découvrez l'histoire inspirante de la famille Emmanuelli...</p>
-                            <a href="les-Justes/famille-emmanuelli" class="btn-decouvrir">Cliquez pour découvrir leur histoire</a>
-                        </div>
-                        <div class="famille-info" id="info-emmanuelli">
-                            <h3>Famille Emmanuelli</h3>
-                            <img src="images/famille_emmanuelli.webp" alt="Famille Emmanuelli" class="famille-img">
-                            <p>Découvrez l'histoire inspirante de la famille Emmanuelli...</p>
-                            <a href="les-Justes/famille-emmanuelli" class="btn-decouvrir">Cliquez pour découvrir leur histoire</a>
+                        <div class="marker-container" id="marker-container-lesmuriers" data-family="lesmuriers">
+                            <img src="images/marker.png" alt="Marker les Mûriers" class="marker">
                         </div>
                     </div>
+                    
+                    <div class="famille-info" id="info-lavarenne">
+                        <h3>Le quartier de La Varenne</h3>
+                        <img src="images/eglise.jpg" alt="Eglise de la Varenne" class="famille-img">
+                        <p>Découvrez le quartier de la Varenne</p>
+                        <a href="rues/la-varenne.html" class="btn-decouvrir">Découvrez les rues en l'honneur des héros de la Seconde Guerre mondiale</a>
+                    </div>
+                    <div class="famille-info" id="info-leparcsm">
+                        <h3>Le quartier du Parc Saint-Maur</h3>
+                        <img src="images/le-parc.jpg" alt="Parc Saint-Maur" class="famille-img">
+                        <p>Découvrez le quartier du parc Saint-Maur </p>
+                        <a href="rues/le-parc-saint-maur.html" class="btn-decouvrir">Découvrez les rues en l'honneur des héros de la Seconde Guerre mondiale</a>
+                    </div>
+                    <div class="famille-info" id="info-vieuxsm">
+                        <h3>Le quartier du Vieux Saint-Maur</h3>
+                        <img src="images/vieuxsm.jpg" alt="Vieux Saint-Maur" class="famille-img">
+                        <p>Découvrez le quartier du Vieux Saint-Maur</p>
+                        <a href="rues/vieux-saint-maur.html" class="btn-decouvrir">Découvrez les rues en l'honneur des héros de la Seconde Guerre mondiale</a>
+                    </div>
+                    <div class="famille-info" id="info-champignol">
+                        <h3>Le quartier de Champignol</h3>
+                        <img src="images/champignol.jpg" alt="Champignol" class="famille-img">
+                        <p>Découvrez le quartier de Champignol</p>
+                        <a href="rues/champignol.html" class="btn-decouvrir">Découvrez les rues en l'honneur des héros de la Seconde Guerre mondiale</a>
+                    </div>
+                    <div class="famille-info" id="info-smcreteil">
+                        <h3>Le quartier de Saint-Maur–Créteil</h3>
+                        <img src="images/smc.jpg" alt="Saint-Maur Créteil" class="famille-img">
+                        <p>Découvrez le quartier de Saint-Maur Créteil</p>
+                        <a href="rues/saint-maur-creteil.html" class="btn-decouvrir">Découvrez les rues en l'honneur des héros de la Seconde Guerre mondiale</a>
+                    </div>
+                    <div class="famille-info" id="info-adamville">
+                        <h3>Le quartier d’Adamville</h3>
+                        <img src="images/adamville.jpg" alt="Adamville" class="famille-img">
+                        <p>Découvrez le quartier d’Adamville</p>
+                        <a href="rues/adamville.html" class="btn-decouvrir">Découvrez les rues en l'honneur des héros de la Seconde Guerre mondiale</a>
+                    </div>
+                    <div class="famille-info" id="info-lapie">
+                        <h3>Le quartier de La Pie</h3>
+                        <img src="images/la-pie.jpg" alt="La Pie" class="famille-img">
+                        <p>Découvrez le quartier de La Pie</p>
+                        <a href="rues/la-pie.html" class="btn-decouvrir">Découvrez les rues en l'honneur des héros de la Seconde Guerre mondiale</a>
+                    </div>
+                    <div class="famille-info" id="info-lesmuriers">
+                        <h3>Le quartier des Mûriers</h3>
+                        <img src="images/les-muriers.jpg" alt="Les Mûriers" class="famille-img">
+                        <p>Découvrez le quartier des Mûriers</p>
+                        <a href="rues/les-muriers.html" class="btn-decouvrir">Découvrez les rues en l'honneur des héros de la Seconde Guerre mondiale</a>
+                    </div>
                 </div>
-            </section>
+            </div>
         </section>
     </body>
-    <footer class="fond-bleu blanc">
+    <footer>
     </footer>
     <script src="js/script.js"></script>
 </html>
