Création des pages pour les quartiers, animation JS de zoom, qq markers de rues

--- a/quartier/saint-maur-creteil.html
+++ b/quartier/saint-maur-creteil.html
@@ -5,95 +5,96 @@
         <meta charset="utf-8" />
         <link rel="icon" href="images/favicon.ico"/>
         <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
-        <link rel="stylesheet" href="styles.css">
+        <link rel="stylesheet" href="../styles.css">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&display=swap" rel="stylesheet">
         <meta name="description" content="Découvrer la carte de Saint-Maur">
-        <title>Carte des rues de Saint-Maur</title>
+        <title>Carte de Saint-Maur–Créteil</title>
     </head>
     <body>
         <section class="sous-sect">
-            <div class="titre">
-                <h2>Les rues de Saint-Maur en l'honneur des héros de la Seconde Guerre Mondiale</h2>
+            <a href="../index.html" class="btn-retour" id="btn-retour-accueil">Retour à la carte</a>
+            <div class="sous-titre">
+                <h2>Le quartier de Saint-Maur Créteil</h2>
             </div>
             <div>
                 <div class="carte-outer-container">
                     <div class="carte-container">
-                        <img src="images/carte.png" alt="carte des quartiers de Saint-Maur" class="carte-img">
-                        <div class="marker-container" id="marker-container-lavarenne" data-family="lavarenne">
-                            <img src="images/marker.png" alt="Marker la Varenne" class="marker">
+                        <img src="../images/smc.png" alt="carte de Saint-Maur Créteil" class="carte-img">
+                        <div class="marker-container" id="marker-container-resistance" data-family="resistance">
+                            <img src="../images/marker.png" alt="Marker Place de  la Résistance" class="marker">
                         </div>
                         <div class="marker-container" id="marker-container-leparcsm" data-family="leparcsm">
-                            <img src="images/marker.png" alt="Marker Le Parc" class="marker">
+                            <img src="../images/marker.png" alt="Marker Le Parc" class="marker">
                         </div>
                         <div class="marker-container" id="marker-container-vieuxsm" data-family="vieuxsm">
-                            <img src="images/marker.png" alt="Marker Vieux Saint-Maur" class="marker">
+                            <img src="../images/marker.png" alt="Marker Vieux Saint-Maur" class="marker">
                         </div>
                         <div class="marker-container" id="marker-container-champignol" data-family="champignol">
-                            <img src="images/marker.png" alt="Marker Champignol" class="marker">
+                            <img src="../images/marker.png" alt="Marker Champignol" class="marker">
                         </div>
                         <div class="marker-container" id="marker-container-smcreteil" data-family="smcreteil">
-                            <img src="images/marker.png" alt="Marker Saint-Maur Créteil" class="marker">
+                            <img src="../images/marker.png" alt="Marker Saint-Maur Créteil" class="marker">
                         </div>
                         <div class="marker-container" id="marker-container-adamville" data-family="adamville">
-                            <img src="images/marker.png" alt="Marker Adamville" class="marker">
+                            <img src="../images/marker.png" alt="Marker Adamville" class="marker">
                         </div>
                         <div class="marker-container" id="marker-container-lapie" data-family="lapie">
-                            <img src="images/marker.png" alt="Marker La Pie" class="marker">
+                            <img src="../images/marker.png" alt="Marker La Pie" class="marker">
                         </div>
                         <div class="marker-container" id="marker-container-lesmuriers" data-family="lesmuriers">
-                            <img src="images/marker.png" alt="Marker les Mûriers" class="marker">
+                            <img src="../images/marker.png" alt="Marker les Mûriers" class="marker">
                         </div>
                     </div>
                     
-                    <div class="famille-info" id="info-lavarenne">
-                        <h3>Le quartier de La Varenne</h3>
-                        <img src="images/eglise.jpg" alt="Eglise de la Varenne" class="famille-img">
-                        <p>Découvrez le quartier de la Varenne</p>
-                        <a href="quartier/la-varenne.html" class="btn-decouvrir">Découvrez les rues en l'honneur des héros de la Seconde Guerre mondiale</a>
+                    <div class="famille-info" id="info-resistance">
+                        <h3>La place de la  Résistance</h3>
+                        <img src="images/eglise.jpg" alt="Place de la Résistance" class="famille-img">
+                        <p>Découvrez la place de la Résistance</p>
+                        <a href="rues/resistance.html" class="btn">Découvrez La place de la Résistance</a>
                     </div>
                     <div class="famille-info" id="info-leparcsm">
                         <h3>Le quartier du Parc Saint-Maur</h3>
                         <img src="images/le-parc.jpg" alt="Parc Saint-Maur" class="famille-img">
                         <p>Découvrez le quartier du parc Saint-Maur </p>
-                        <a href="quartier/le-parc-saint-maur.html" class="btn-decouvrir">Découvrez les rues en l'honneur des héros de la Seconde Guerre mondiale</a>
+                        <a href="rues/le-parc-saint-maur.html" class="btn-decouvrir">Découvrez les rues en l'honneur des héros de la Seconde Guerre mondiale</a>
                     </div>
                     <div class="famille-info" id="info-vieuxsm">
                         <h3>Le quartier du Vieux Saint-Maur</h3>
                         <img src="images/vieuxsm.jpg" alt="Vieux Saint-Maur" class="famille-img">
                         <p>Découvrez le quartier du Vieux Saint-Maur</p>
-                        <a href="quartier/vieux-saint-maur.html" class="btn-decouvrir">Découvrez les rues en l'honneur des héros de la Seconde Guerre mondiale</a>
+                        <a href="rues/vieux-saint-maur.html" class="btn-decouvrir">Découvrez les rues en l'honneur des héros de la Seconde Guerre mondiale</a>
                     </div>
                     <div class="famille-info" id="info-champignol">
                         <h3>Le quartier de Champignol</h3>
                         <img src="images/champignol.jpg" alt="Champignol" class="famille-img">
                         <p>Découvrez le quartier de Champignol</p>
-                        <a href="quartier/champignol.html" class="btn-decouvrir">Découvrez les rues en l'honneur des héros de la Seconde Guerre mondiale</a>
+                        <a href="rues/champignol.html" class="btn-decouvrir">Découvrez les rues en l'honneur des héros de la Seconde Guerre mondiale</a>
                     </div>
                     <div class="famille-info" id="info-smcreteil">
                         <h3>Le quartier de Saint-Maur–Créteil</h3>
                         <img src="images/smc.jpg" alt="Saint-Maur Créteil" class="famille-img">
                         <p>Découvrez le quartier de Saint-Maur Créteil</p>
-                        <a href="quartier/saint-maur-creteil.html" class="btn-decouvrir">Découvrez les rues en l'honneur des héros de la Seconde Guerre mondiale</a>
+                        <a href="rues/saint-maur-creteil.html" class="btn-decouvrir">Découvrez les rues en l'honneur des héros de la Seconde Guerre mondiale</a>
                     </div>
                     <div class="famille-info" id="info-adamville">
                         <h3>Le quartier d’Adamville</h3>
                         <img src="images/adamville.jpg" alt="Adamville" class="famille-img">
                         <p>Découvrez le quartier d’Adamville</p>
-                        <a href="quartier/adamville.html" class="btn-decouvrir">Découvrez les rues en l'honneur des héros de la Seconde Guerre mondiale</a>
+                        <a href="rues/adamville.html" class="btn-decouvrir">Découvrez les rues en l'honneur des héros de la Seconde Guerre mondiale</a>
                     </div>
                     <div class="famille-info" id="info-lapie">
                         <h3>Le quartier de La Pie</h3>
                         <img src="images/la-pie.jpg" alt="La Pie" class="famille-img">
                         <p>Découvrez le quartier de La Pie</p>
-                        <a href="quartier/la-pie.html" class="btn-decouvrir">Découvrez les rues en l'honneur des héros de la Seconde Guerre mondiale</a>
+                        <a href="rues/la-pie.html" class="btn-decouvrir">Découvrez les rues en l'honneur des héros de la Seconde Guerre mondiale</a>
                     </div>
                     <div class="famille-info" id="info-lesmuriers">
                         <h3>Le quartier des Mûriers</h3>
                         <img src="images/les-muriers.jpg" alt="Les Mûriers" class="famille-img">
                         <p>Découvrez le quartier des Mûriers</p>
-                        <a href="quartier/les-muriers.html" class="btn-decouvrir">Découvrez les rues en l'honneur des héros de la Seconde Guerre mondiale</a>
+                        <a href="rues/les-muriers.html" class="btn-decouvrir">Découvrez les rues en l'honneur des héros de la Seconde Guerre mondiale</a>
                     </div>
                 </div>
             </div>
@@ -101,5 +102,6 @@
     </body>
     <footer>
     </footer>
-    <script src="js/script.js"></script>
+    <script src="../js/script.js"></script>
+    <script src="../js/retour-quartier.js"></script>
 </html>
