2eme version : animation pour les rues...

--- a/quartier/adamville.html
+++ b/quartier/adamville.html
@@ -21,80 +21,44 @@
             <div>
                 <div class="carte-outer-container">
                     <div class="carte-container">
-                        <img src="../images/adamville.png" alt="carte d'Adamville'" class="carte-img">
+                        <img src="../images/adamville.webp" alt="carte d'Adamville'" class="carte-img">
                         <div class="marker-container" id="marker-container-birhakeim" data-family="birhakeim">
-                            <img src="../images/marker.png" alt="Marker Rue de Bir-Hakeim" class="marker">
+                            <img src="../images/marker.webp" alt="Marker Rue de Bir-Hakeim" class="marker">
                         </div>
                         <div class="marker-container" id="marker-container-juin" data-family="juin">
-                            <img src="../images/marker.png" alt="Marker Place du Maréchal-Juin" class="marker">
+                            <img src="../images/marker.webp" alt="Marker Place du Maréchal-Juin" class="marker">
                         </div>
-                        <div class="marker-container" id="marker-container-vieuxsm" data-family="vieuxsm">
-                            <img src="../images/marker.png" alt="Marker Vieux Saint-Maur" class="marker">
+                        <div class="marker-container" id="marker-container-rue-edouard-vallerand" data-family="rue-edouard-vallerand">
+                            <img src="../images/marker.webp" alt="Marker Rue Edouard-Vallerand" class="marker">
                         </div>
-                        <div class="marker-container" id="marker-container-champignol" data-family="champignol">
-                            <img src="../images/marker.png" alt="Marker Champignol" class="marker">
-                        </div>
-                        <div class="marker-container" id="marker-container-smcreteil" data-family="smcreteil">
-                            <img src="../images/marker.png" alt="Marker Saint-Maur Créteil" class="marker">
-                        </div>
-                        <div class="marker-container" id="marker-container-adamville" data-family="adamville">
-                            <img src="../images/marker.png" alt="Marker Adamville" class="marker">
-                        </div>
-                        <div class="marker-container" id="marker-container-lapie" data-family="lapie">
-                            <img src="../images/marker.png" alt="Marker La Pie" class="marker">
-                        </div>
-                        <div class="marker-container" id="marker-container-lesmuriers" data-family="lesmuriers">
-                            <img src="../images/marker.png" alt="Marker les Mûriers" class="marker">
+                        <div class="marker-container" id="marker-container-carrefour-du-huit-mai-1945" data-family="carrefour-du-huit-mai-1945">
+                            <img src="../images/marker.webp" alt="Marker Carrefour du Huit-Mai 1945" class="marker">
                         </div>
                     </div>
                     
                     <div class="famille-info" id="info-birhakeim">
                         <h3>La rue de Bir-Hakeim</h3>
-                        <img src="images/eglise.jpg" alt="Rue de Bir-Hakeim" class="famille-img">
+                        <img src="images/eglise.webp" alt="Rue de Bir-Hakeim" class="famille-img">
                         <p>La rue de Bir-Hakeim</p>
-                        <a href="../rues/bir-hakeim.html" class="btn">Découvrez la rue de Bir-Hakeim</a>
+                        <a href="../rues/rue-de-bir-hakeim.html" class="btn-decouvrir">Découvrez la rue de Bir-Hakeim</a>
                     </div>
                     <div class="famille-info" id="info-juin">
                         <h3>la Place du Maréchal-Juin</h3>
-                        <img src="images/le-parc.jpg" alt="Place du Maréchal-Juin" class="famille-img">
+                        <img src="images/le-parc.webp" alt="Place du Maréchal-Juin" class="famille-img">
                         <p>Découvrez la Place du Maréchal-Juin</p>
-                        <a href="rues/marechal-juin.html" class="btn">Découvrez la Place du Maréchal-Juin</a>
+                        <a href="../rues/marechal-juin.html" class="btn-decouvrir">Découvrez la Place du Maréchal-Juin</a>
                     </div>
-                    <div class="famille-info" id="info-vieuxsm">
-                        <h3>Le quartier du Vieux Saint-Maur</h3>
-                        <img src="images/vieuxsm.jpg" alt="Vieux Saint-Maur" class="famille-img">
-                        <p>Découvrez le quartier du Vieux Saint-Maur</p>
-                        <a href="rues/vieux-saint-maur.html" class="btn-decouvrir">Découvrez les rues en l'honneur des héros de la Seconde Guerre mondiale</a>
+                    <div class="famille-info" id="info-rue-edouard-vallerand">
+                        <h3>La Rue Edouard-Vallerand</h3>
+                        <img src="images/le-parc.webp" alt="Rue Edouard-Vallerand" class="famille-img">
+                        <p>Découvrez la Rue Edouard-Vallerand</p>
+                        <a href="../rues/rue-edouard-vallerand.html" class="btn-decouvrir">Découvrez la Rue Edouard-Vallerand</a>
                     </div>
-                    <div class="famille-info" id="info-champignol">
-                        <h3>Le quartier de Champignol</h3>
-                        <img src="images/champignol.jpg" alt="Champignol" class="famille-img">
-                        <p>Découvrez le quartier de Champignol</p>
-                        <a href="rues/champignol.html" class="btn-decouvrir">Découvrez les rues en l'honneur des héros de la Seconde Guerre mondiale</a>
-                    </div>
-                    <div class="famille-info" id="info-smcreteil">
-                        <h3>Le quartier de Saint-Maur–Créteil</h3>
-                        <img src="images/smc.jpg" alt="Saint-Maur Créteil" class="famille-img">
-                        <p>Découvrez le quartier de Saint-Maur Créteil</p>
-                        <a href="rues/saint-maur-creteil.html" class="btn-decouvrir">Découvrez les rues en l'honneur des héros de la Seconde Guerre mondiale</a>
-                    </div>
-                    <div class="famille-info" id="info-adamville">
-                        <h3>Le quartier d’Adamville</h3>
-                        <img src="images/adamville.jpg" alt="Adamville" class="famille-img">
-                        <p>Découvrez le quartier d’Adamville</p>
-                        <a href="rues/adamville.html" class="btn-decouvrir">Découvrez les rues en l'honneur des héros de la Seconde Guerre mondiale</a>
-                    </div>
-                    <div class="famille-info" id="info-lapie">
-                        <h3>Le quartier de La Pie</h3>
-                        <img src="images/la-pie.jpg" alt="La Pie" class="famille-img">
-                        <p>Découvrez le quartier de La Pie</p>
-                        <a href="rues/la-pie.html" class="btn-decouvrir">Découvrez les rues en l'honneur des héros de la Seconde Guerre mondiale</a>
-                    </div>
-                    <div class="famille-info" id="info-lesmuriers">
-                        <h3>Le quartier des Mûriers</h3>
-                        <img src="images/les-muriers.jpg" alt="Les Mûriers" class="famille-img">
-                        <p>Découvrez le quartier des Mûriers</p>
-                        <a href="rues/les-muriers.html" class="btn-decouvrir">Découvrez les rues en l'honneur des héros de la Seconde Guerre mondiale</a>
+                    <div class="famille-info" id="info-carrefour-du-huit-mai-1945">
+                        <h3>Le Carrefour du Huit-Mai 1945</h3>
+                        <img src="images/le-parc.webp" alt="Carrefour du Huit-Mai 1945" class="famille-img">
+                        <p>Découvrez le Carrefour du Huit-Mai 1945</p>
+                        <a href="../rues/carrefour-du-huit-mai-1945.html" class="btn-decouvrir">Découvrez le Carrefour du Huit-Mai 1945</a>
                     </div>
                 </div>
             </div>
