--- a/quartier/la-pie.html
+++ b/quartier/la-pie.html
@@ -21,80 +21,26 @@
             <div>
                 <div class="carte-outer-container">
                     <div class="carte-container">
-                        <img src="../images/lapie.png" alt="carte de la Pie" class="carte-img">
+                        <img src="../images/lapie.webp" alt="carte de la Pie" class="carte-img">
                         <div class="marker-container" id="marker-container-bayon" data-family="bayon">
-                            <img src="../images/marker.png" alt="Marker Bayon" class="marker">
+                            <img src="../images/marker.webp" alt="Marker Bayon" class="marker">
                         </div>
-                        <div class="marker-container" id="marker-container-leparcsm" data-family="leparcsm">
-                            <img src="../images/marker.png" alt="Marker Le Parc" class="marker">
-                        </div>
-                        <div class="marker-container" id="marker-container-vieuxsm" data-family="vieuxsm">
-                            <img src="../images/marker.png" alt="Marker Vieux Saint-Maur" class="marker">
-                        </div>
-                        <div class="marker-container" id="marker-container-champignol" data-family="champignol">
-                            <img src="../images/marker.png" alt="Marker Champignol" class="marker">
-                        </div>
-                        <div class="marker-container" id="marker-container-smcreteil" data-family="smcreteil">
-                            <img src="../images/marker.png" alt="Marker Saint-Maur Créteil" class="marker">
-                        </div>
-                        <div class="marker-container" id="marker-container-adamville" data-family="adamville">
-                            <img src="../images/marker.png" alt="Marker Adamville" class="marker">
-                        </div>
-                        <div class="marker-container" id="marker-container-lapie" data-family="lapie">
-                            <img src="../images/marker.png" alt="Marker La Pie" class="marker">
-                        </div>
-                        <div class="marker-container" id="marker-container-lesmuriers" data-family="lesmuriers">
-                            <img src="../images/marker.png" alt="Marker les Mûriers" class="marker">
+                        <div class="marker-container" id="marker-container-boulevard-du-general-giraud" data-family="boulevard-du-general-giraud">
+                            <img src="../images/marker.webp" alt="Marker Boulevard du Général-Giraud " class="marker">
                         </div>
                     </div>
                     
                     <div class="famille-info" id="info-bayon">
                         <h3>La rue Bayon</h3>
-                        <img src="images/eglise.jpg" alt="Rue Bayon" class="famille-img">
+                        <img src="images/eglise.webp" alt="Rue Bayon" class="famille-img">
                         <p>Découvrez la rue Bayon</p>
-                        <a href="rues/bayon.html" class="btn">Découvrez la rue Bayon</a>
+                        <a href="../rues/rue-bayon.html" class="btn-decouvrir">Découvrez la rue Bayon</a>
                     </div>
-                    <div class="famille-info" id="info-leparcsm">
-                        <h3>Le quartier du Parc Saint-Maur</h3>
-                        <img src="images/le-parc.jpg" alt="Parc Saint-Maur" class="famille-img">
-                        <p>Découvrez le quartier du parc Saint-Maur </p>
-                        <a href="rues/le-parc-saint-maur.html" class="btn-decouvrir">Découvrez les rues en l'honneur des héros de la Seconde Guerre mondiale</a>
-                    </div>
-                    <div class="famille-info" id="info-vieuxsm">
-                        <h3>Le quartier du Vieux Saint-Maur</h3>
-                        <img src="images/vieuxsm.jpg" alt="Vieux Saint-Maur" class="famille-img">
-                        <p>Découvrez le quartier du Vieux Saint-Maur</p>
-                        <a href="rues/vieux-saint-maur.html" class="btn-decouvrir">Découvrez les rues en l'honneur des héros de la Seconde Guerre mondiale</a>
-                    </div>
-                    <div class="famille-info" id="info-champignol">
-                        <h3>Le quartier de Champignol</h3>
-                        <img src="images/champignol.jpg" alt="Champignol" class="famille-img">
-                        <p>Découvrez le quartier de Champignol</p>
-                        <a href="rues/champignol.html" class="btn-decouvrir">Découvrez les rues en l'honneur des héros de la Seconde Guerre mondiale</a>
-                    </div>
-                    <div class="famille-info" id="info-smcreteil">
-                        <h3>Le quartier de Saint-Maur–Créteil</h3>
-                        <img src="images/smc.jpg" alt="Saint-Maur Créteil" class="famille-img">
-                        <p>Découvrez le quartier de Saint-Maur Créteil</p>
-                        <a href="rues/saint-maur-creteil.html" class="btn-decouvrir">Découvrez les rues en l'honneur des héros de la Seconde Guerre mondiale</a>
-                    </div>
-                    <div class="famille-info" id="info-adamville">
-                        <h3>Le quartier d’Adamville</h3>
-                        <img src="images/adamville.jpg" alt="Adamville" class="famille-img">
-                        <p>Découvrez le quartier d’Adamville</p>
-                        <a href="rues/adamville.html" class="btn-decouvrir">Découvrez les rues en l'honneur des héros de la Seconde Guerre mondiale</a>
-                    </div>
-                    <div class="famille-info" id="info-lapie">
-                        <h3>Le quartier de La Pie</h3>
-                        <img src="images/la-pie.jpg" alt="La Pie" class="famille-img">
-                        <p>Découvrez le quartier de La Pie</p>
-                        <a href="rues/la-pie.html" class="btn-decouvrir">Découvrez les rues en l'honneur des héros de la Seconde Guerre mondiale</a>
-                    </div>
-                    <div class="famille-info" id="info-lesmuriers">
-                        <h3>Le quartier des Mûriers</h3>
-                        <img src="images/les-muriers.jpg" alt="Les Mûriers" class="famille-img">
-                        <p>Découvrez le quartier des Mûriers</p>
-                        <a href="rues/les-muriers.html" class="btn-decouvrir">Découvrez les rues en l'honneur des héros de la Seconde Guerre mondiale</a>
+                    <div class="famille-info" id="info-boulevard-du-general-giraud">
+                        <h3>Le Boulevard du Général-Giraud </h3>
+                        <img src="images/eglise.webp" alt="Rue Bayon" class="famille-img">
+                        <p>Découvrez le Boulevard du Général-Giraud </p>
+                        <a href="../rues/boulevard-du-general-giraud.html" class="btn-decouvrir">Découvrez le Boulevard du Général-Giraud </a>
                     </div>
                 </div>
             </div>
