--- a/quartier/le-parc-saint-maur.html
+++ b/quartier/le-parc-saint-maur.html
@@ -21,80 +21,62 @@
             <div>
                 <div class="carte-outer-container">
                     <div class="carte-container">
-                        <img src="../images/leparc.png" alt="Carte de Saint-Maur le Parc" class="carte-img">
+                        <img src="../images/leparc.webp" alt="Carte de Saint-Maur le Parc" class="carte-img">
                         <div class="marker-container" id="marker-container-lattre" data-family="lattre">
-                            <img src="../images/marker.png" alt="Marker Avneue De Lattre-de-Tassigny" class="marker">
+                            <img src="../images/marker.webp" alt="Marker Avneue De Lattre-de-Tassigny" class="marker">
                         </div>
                         <div class="marker-container" id="marker-container-leclerc" data-family="leclerc">
-                            <img src="../images/marker.png" alt="Marker Avenue du Général-Leclerc" class="marker">
+                            <img src="../images/marker.webp" alt="Marker Avenue du Général-Leclerc" class="marker">
                         </div>
-                        <div class="marker-container" id="marker-container-vieuxsm" data-family="vieuxsm">
-                            <img src="../images/marker.png" alt="Marker Vieux Saint-Maur" class="marker">
+                        <div class="marker-container" id="marker-container-square-emilie-tillion" data-family="square-emilie-tillion">
+                            <img src="../images/marker.webp" alt="Marker Square Émilie-Tillion" class="marker">
                         </div>
-                        <div class="marker-container" id="marker-container-champignol" data-family="champignol">
-                            <img src="../images/marker.png" alt="Marker Champignol" class="marker">
+                        <div class="marker-container" id="marker-container-avenue-des-fusilles-de-chateaubriant" data-family="avenue-des-fusilles-de-chateaubriant">
+                            <img src="../images/marker.webp" alt="Marker Avenue des Fusillés de Châteaubriant" class="marker">
                         </div>
-                        <div class="marker-container" id="marker-container-smcreteil" data-family="smcreteil">
-                            <img src="../images/marker.png" alt="Marker Saint-Maur Créteil" class="marker">
+                        <div class="marker-container" id="marker-container-avenue-leopold-sedar-senghor" data-family="avenue-leopold-sedar-senghor">
+                            <img src="../images/marker.webp" alt="Marker Avenue Léopold-Sédar-Senghor" class="marker">
                         </div>
-                        <div class="marker-container" id="marker-container-adamville" data-family="adamville">
-                            <img src="../images/marker.png" alt="Marker Adamville" class="marker">
-                        </div>
-                        <div class="marker-container" id="marker-container-lapie" data-family="lapie">
-                            <img src="../images/marker.png" alt="Marker La Pie" class="marker">
-                        </div>
-                        <div class="marker-container" id="marker-container-lesmuriers" data-family="lesmuriers">
-                            <img src="../images/marker.png" alt="Marker les Mûriers" class="marker">
+                        <div class="marker-container" id="marker-container-avenue-pierre-brossolette" data-family="avenue-pierre-brossolette">
+                            <img src="../images/marker.webp" alt="Marker Avenue Pierre-Brossolette" class="marker">
                         </div>
                     </div>
                     
                     <div class="famille-info" id="info-lattre">
                         <h3>l'avenue De Lattre-de-Tassigny</h3>
-                        <img src="images/eglise.jpg" alt="Eglise de la Varenne" class="famille-img">
+                        <img src="images/eglise.webp" alt="Eglise de la Varenne" class="famille-img">
                         <p>Découvrez l'avenue De Lattre-de-Tassigny</p>
-                        <a href="rues/lattre.html" class="btn">Découvrez l'avenue De Lattre-de-Tassigny</a>
+                        <a href="../rues/avenue-de-lattre-de-tassigny.html" class="btn-decouvrir">Découvrez l'avenue De Lattre-de-Tassigny</a>
                     </div>
                     <div class="famille-info" id="info-leclerc">
                         <h3>l'Avenue du Général-Leclerc</h3>
-                        <img src="images/le-parc.jpg" alt="Avenue du Général-Leclerc" class="famille-img">
-                        <p>Découvrez Avenue du Général-Leclerc</p>
-                        <a href="rues/leclerc.html" class="btn">Découvrez Avenue du Général-Leclerc</a>
+                        <img src="images/le-parc.webp" alt="Avenue du Général-Leclerc" class="famille-img">
+                        <p>Découvrez l'Avenue du Général-Leclerc</p>
+                        <a href="../rues/avenue-du-general-leclerc.html" class="btn-decouvrir">Découvrez l'Avenue du Général-Leclerc</a>
                     </div>
-                    <div class="famille-info" id="info-vieuxsm">
-                        <h3>Le quartier du Vieux Saint-Maur</h3>
-                        <img src="images/vieuxsm.jpg" alt="Vieux Saint-Maur" class="famille-img">
-                        <p>Découvrez le quartier du Vieux Saint-Maur</p>
-                        <a href="rues/vieux-saint-maur.html" class="btn-decouvrir">Découvrez les rues en l'honneur des héros de la Seconde Guerre mondiale</a>
+                    <div class="famille-info" id="info-square-emilie-tillion">
+                        <h3>le Square Émilie-Tillion</h3>
+                        <img src="images/le-parc.webp" alt="Square Émilie-Tillion" class="famille-img">
+                        <p>Découvrez le Square Émilie-Tillion</p>
+                        <a href="../rues/square-emilie-tillion.html" class="btn-decouvrir">Découvrez le Square Émilie-Tillion</a>
                     </div>
-                    <div class="famille-info" id="info-champignol">
-                        <h3>Le quartier de Champignol</h3>
-                        <img src="images/champignol.jpg" alt="Champignol" class="famille-img">
-                        <p>Découvrez le quartier de Champignol</p>
-                        <a href="rues/champignol.html" class="btn-decouvrir">Découvrez les rues en l'honneur des héros de la Seconde Guerre mondiale</a>
+                    <div class="famille-info" id="info-avenue-des-fusilles-de-chateaubriant">
+                        <h3>l'Avenue des Fusillés de Châteaubriant</h3>
+                        <img src="images/le-parc.webp" alt="Avenue des Fusillés de Châteaubriant" class="famille-img">
+                        <p>Découvrez l'Avenue des Fusillés de Châteaubriant</p>
+                        <a href="../rues/avenue-des-fusilles-de-chateaubriant.html" class="btn-decouvrir">Découvrez l'Avenue des Fusillés de Châteaubriant</a>
                     </div>
-                    <div class="famille-info" id="info-smcreteil">
-                        <h3>Le quartier de Saint-Maur–Créteil</h3>
-                        <img src="images/smc.jpg" alt="Saint-Maur Créteil" class="famille-img">
-                        <p>Découvrez le quartier de Saint-Maur Créteil</p>
-                        <a href="rues/saint-maur-creteil.html" class="btn-decouvrir">Découvrez les rues en l'honneur des héros de la Seconde Guerre mondiale</a>
+                    <div class="famille-info" id="info-avenue-leopold-sedar-senghor">
+                        <h3>l'Avenue Léopold-Sédar-Senghor</h3>
+                        <img src="images/le-parc.webp" alt="Avenue Léopold-Sédar-Senghor" class="famille-img">
+                        <p>Découvrez l'Avenue Léopold-Sédar-Senghor</p>
+                        <a href="../rues/avenue-leopold-sedar-senghor.html" class="btn-decouvrir">Découvrez l'Avenue Léopold-Sédar-Senghor</a>
                     </div>
-                    <div class="famille-info" id="info-adamville">
-                        <h3>Le quartier d’Adamville</h3>
-                        <img src="images/adamville.jpg" alt="Adamville" class="famille-img">
-                        <p>Découvrez le quartier d’Adamville</p>
-                        <a href="rues/adamville.html" class="btn-decouvrir">Découvrez les rues en l'honneur des héros de la Seconde Guerre mondiale</a>
-                    </div>
-                    <div class="famille-info" id="info-lapie">
-                        <h3>Le quartier de La Pie</h3>
-                        <img src="images/la-pie.jpg" alt="La Pie" class="famille-img">
-                        <p>Découvrez le quartier de La Pie</p>
-                        <a href="rues/la-pie.html" class="btn-decouvrir">Découvrez les rues en l'honneur des héros de la Seconde Guerre mondiale</a>
-                    </div>
-                    <div class="famille-info" id="info-lesmuriers">
-                        <h3>Le quartier des Mûriers</h3>
-                        <img src="images/les-muriers.jpg" alt="Les Mûriers" class="famille-img">
-                        <p>Découvrez le quartier des Mûriers</p>
-                        <a href="rues/les-muriers.html" class="btn-decouvrir">Découvrez les rues en l'honneur des héros de la Seconde Guerre mondiale</a>
+                    <div class="famille-info" id="info-avenue-pierre-brossolette">
+                        <h3>l'Avenue Pierre-Brossolette</h3>
+                        <img src="images/le-parc.webp" alt="Avenue Pierre-Brossolette" class="famille-img">
+                        <p>Découvrez l'Avenue Pierre-Brossolette'</p>
+                        <a href="../rues/avenue-pierre-brossolette.html" class="btn-decouvrir">Découvrez l'Avenue Pierre-Brossolette</a>
                     </div>
                 </div>
             </div>
