--- a/index.html
+++ b/index.html
@@ -20,78 +20,78 @@
             <div>
                 <div class="carte-outer-container">
                     <div class="carte-container">
-                        <img src="images/carte.png" alt="carte des quartiers de Saint-Maur" class="carte-img">
+                        <img src="images/carte.webp" alt="carte des quartiers de Saint-Maur" class="carte-img">
                         <div class="marker-container" id="marker-container-lavarenne" data-family="lavarenne">
-                            <img src="images/marker.png" alt="Marker la Varenne" class="marker">
+                            <img src="images/marker.webp" alt="Marker la Varenne" class="marker">
                         </div>
                         <div class="marker-container" id="marker-container-leparcsm" data-family="leparcsm">
-                            <img src="images/marker.png" alt="Marker Le Parc" class="marker">
+                            <img src="images/marker.webp" alt="Marker Le Parc" class="marker">
                         </div>
                         <div class="marker-container" id="marker-container-vieuxsm" data-family="vieuxsm">
-                            <img src="images/marker.png" alt="Marker Vieux Saint-Maur" class="marker">
+                            <img src="images/marker.webp" alt="Marker Vieux Saint-Maur" class="marker">
                         </div>
                         <div class="marker-container" id="marker-container-champignol" data-family="champignol">
-                            <img src="images/marker.png" alt="Marker Champignol" class="marker">
+                            <img src="images/marker.webp" alt="Marker Champignol" class="marker">
                         </div>
                         <div class="marker-container" id="marker-container-smcreteil" data-family="smcreteil">
-                            <img src="images/marker.png" alt="Marker Saint-Maur Créteil" class="marker">
+                            <img src="images/marker.webp" alt="Marker Saint-Maur Créteil" class="marker">
                         </div>
                         <div class="marker-container" id="marker-container-adamville" data-family="adamville">
-                            <img src="images/marker.png" alt="Marker Adamville" class="marker">
+                            <img src="images/marker.webp" alt="Marker Adamville" class="marker">
                         </div>
                         <div class="marker-container" id="marker-container-lapie" data-family="lapie">
-                            <img src="images/marker.png" alt="Marker La Pie" class="marker">
+                            <img src="images/marker.webp" alt="Marker La Pie" class="marker">
                         </div>
                         <div class="marker-container" id="marker-container-lesmuriers" data-family="lesmuriers">
-                            <img src="images/marker.png" alt="Marker les Mûriers" class="marker">
+                            <img src="images/marker.webp" alt="Marker les Mûriers" class="marker">
                         </div>
                     </div>
                     
                     <div class="famille-info" id="info-lavarenne">
                         <h3>Le quartier de La Varenne</h3>
-                        <img src="images/eglise.jpg" alt="Eglise de la Varenne" class="famille-img">
+                        <img src="images/eglise.webp" alt="Eglise de la Varenne" class="famille-img">
                         <p>Découvrez le quartier de la Varenne</p>
                         <a href="quartier/la-varenne.html" class="btn-decouvrir">Découvrez les rues en l'honneur des héros de la Seconde Guerre mondiale</a>
                     </div>
                     <div class="famille-info" id="info-leparcsm">
                         <h3>Le quartier du Parc Saint-Maur</h3>
-                        <img src="images/le-parc.jpg" alt="Parc Saint-Maur" class="famille-img">
+                        <img src="images/le-parc.webp" alt="Parc Saint-Maur" class="famille-img">
                         <p>Découvrez le quartier du parc Saint-Maur </p>
                         <a href="quartier/le-parc-saint-maur.html" class="btn-decouvrir">Découvrez les rues en l'honneur des héros de la Seconde Guerre mondiale</a>
                     </div>
                     <div class="famille-info" id="info-vieuxsm">
                         <h3>Le quartier du Vieux Saint-Maur</h3>
-                        <img src="images/vieuxsm.jpg" alt="Vieux Saint-Maur" class="famille-img">
+                        <img src="images/vieuxsm.webp" alt="Vieux Saint-Maur" class="famille-img">
                         <p>Découvrez le quartier du Vieux Saint-Maur</p>
                         <a href="quartier/vieux-saint-maur.html" class="btn-decouvrir">Découvrez les rues en l'honneur des héros de la Seconde Guerre mondiale</a>
                     </div>
                     <div class="famille-info" id="info-champignol">
                         <h3>Le quartier de Champignol</h3>
-                        <img src="images/champignol.jpg" alt="Champignol" class="famille-img">
+                        <img src="images/champignol.webp" alt="Champignol" class="famille-img">
                         <p>Découvrez le quartier de Champignol</p>
                         <a href="quartier/champignol.html" class="btn-decouvrir">Découvrez les rues en l'honneur des héros de la Seconde Guerre mondiale</a>
                     </div>
                     <div class="famille-info" id="info-smcreteil">
                         <h3>Le quartier de Saint-Maur–Créteil</h3>
-                        <img src="images/smc.jpg" alt="Saint-Maur Créteil" class="famille-img">
+                        <img src="images/smc.webp" alt="Saint-Maur Créteil" class="famille-img">
                         <p>Découvrez le quartier de Saint-Maur Créteil</p>
                         <a href="quartier/saint-maur-creteil.html" class="btn-decouvrir">Découvrez les rues en l'honneur des héros de la Seconde Guerre mondiale</a>
                     </div>
                     <div class="famille-info" id="info-adamville">
                         <h3>Le quartier d’Adamville</h3>
-                        <img src="images/adamville.jpg" alt="Adamville" class="famille-img">
+                        <img src="images/adamville.webp" alt="Adamville" class="famille-img">
                         <p>Découvrez le quartier d’Adamville</p>
                         <a href="quartier/adamville.html" class="btn-decouvrir">Découvrez les rues en l'honneur des héros de la Seconde Guerre mondiale</a>
                     </div>
                     <div class="famille-info" id="info-lapie">
                         <h3>Le quartier de La Pie</h3>
-                        <img src="images/la-pie.jpg" alt="La Pie" class="famille-img">
+                        <img src="images/la-pie.webp" alt="La Pie" class="famille-img">
                         <p>Découvrez le quartier de La Pie</p>
                         <a href="quartier/la-pie.html" class="btn-decouvrir">Découvrez les rues en l'honneur des héros de la Seconde Guerre mondiale</a>
                     </div>
                     <div class="famille-info" id="info-lesmuriers">
                         <h3>Le quartier des Mûriers</h3>
-                        <img src="images/les-muriers.jpg" alt="Les Mûriers" class="famille-img">
+                        <img src="images/les-muriers.webp" alt="Les Mûriers" class="famille-img">
                         <p>Découvrez le quartier des Mûriers</p>
                         <a href="quartier/les-muriers.html" class="btn-decouvrir">Découvrez les rues en l'honneur des héros de la Seconde Guerre mondiale</a>
                     </div>
