--- a/quartier/saint-maur-creteil.html
+++ b/quartier/saint-maur-creteil.html
@@ -21,80 +21,35 @@
             <div>
                 <div class="carte-outer-container">
                     <div class="carte-container">
-                        <img src="../images/smc.png" alt="carte de Saint-Maur Créteil" class="carte-img">
+                        <img src="../images/smc.webp" alt="carte de Saint-Maur Créteil" class="carte-img">
                         <div class="marker-container" id="marker-container-resistance" data-family="resistance">
-                            <img src="../images/marker.png" alt="Marker Place de  la Résistance" class="marker">
+                            <img src="../images/marker.webp" alt="Marker Place de la Résistance" class="marker">
                         </div>
-                        <div class="marker-container" id="marker-container-leparcsm" data-family="leparcsm">
-                            <img src="../images/marker.png" alt="Marker Le Parc" class="marker">
+                        <div class="marker-container" id="marker-container-rue-andre-bollier" data-family="rue-andre-bollier">
+                            <img src="../images/marker.webp" alt="Marker Rue André Bollier" class="marker">
                         </div>
-                        <div class="marker-container" id="marker-container-vieuxsm" data-family="vieuxsm">
-                            <img src="../images/marker.png" alt="Marker Vieux Saint-Maur" class="marker">
-                        </div>
-                        <div class="marker-container" id="marker-container-champignol" data-family="champignol">
-                            <img src="../images/marker.png" alt="Marker Champignol" class="marker">
-                        </div>
-                        <div class="marker-container" id="marker-container-smcreteil" data-family="smcreteil">
-                            <img src="../images/marker.png" alt="Marker Saint-Maur Créteil" class="marker">
-                        </div>
-                        <div class="marker-container" id="marker-container-adamville" data-family="adamville">
-                            <img src="../images/marker.png" alt="Marker Adamville" class="marker">
-                        </div>
-                        <div class="marker-container" id="marker-container-lapie" data-family="lapie">
-                            <img src="../images/marker.png" alt="Marker La Pie" class="marker">
-                        </div>
-                        <div class="marker-container" id="marker-container-lesmuriers" data-family="lesmuriers">
-                            <img src="../images/marker.png" alt="Marker les Mûriers" class="marker">
+                        <div class="marker-container" id="marker-container-rue-politzer" data-family="rue-politzer">
+                            <img src="../images/marker.webp" alt="Marker Rue Politzer" class="marker">
                         </div>
                     </div>
                     
                     <div class="famille-info" id="info-resistance">
                         <h3>La place de la  Résistance</h3>
-                        <img src="images/eglise.jpg" alt="Place de la Résistance" class="famille-img">
+                        <img src="images/eglise.webp" alt="Place de la Résistance" class="famille-img">
                         <p>Découvrez la place de la Résistance</p>
-                        <a href="rues/resistance.html" class="btn">Découvrez La place de la Résistance</a>
+                        <a href="../rues/place-de-la-resistance.html" class="btn-decouvrir">Découvrez La place de la Résistance</a>
                     </div>
-                    <div class="famille-info" id="info-leparcsm">
-                        <h3>Le quartier du Parc Saint-Maur</h3>
-                        <img src="images/le-parc.jpg" alt="Parc Saint-Maur" class="famille-img">
-                        <p>Découvrez le quartier du parc Saint-Maur </p>
-                        <a href="rues/le-parc-saint-maur.html" class="btn-decouvrir">Découvrez les rues en l'honneur des héros de la Seconde Guerre mondiale</a>
+                    <div class="famille-info" id="info-rue-andre-bollier">
+                        <h3>La rue André Bollier</h3>
+                        <img src="images/eglise.webp" alt="Rue André Bollier" class="famille-img">
+                        <p>Découvrez la rue André Bollier</p>
+                        <a href="../rues/rue-andre-bollier.html" class="btn-decouvrir">Découvrez la rue André Bollier</a>
                     </div>
-                    <div class="famille-info" id="info-vieuxsm">
-                        <h3>Le quartier du Vieux Saint-Maur</h3>
-                        <img src="images/vieuxsm.jpg" alt="Vieux Saint-Maur" class="famille-img">
-                        <p>Découvrez le quartier du Vieux Saint-Maur</p>
-                        <a href="rues/vieux-saint-maur.html" class="btn-decouvrir">Découvrez les rues en l'honneur des héros de la Seconde Guerre mondiale</a>
-                    </div>
-                    <div class="famille-info" id="info-champignol">
-                        <h3>Le quartier de Champignol</h3>
-                        <img src="images/champignol.jpg" alt="Champignol" class="famille-img">
-                        <p>Découvrez le quartier de Champignol</p>
-                        <a href="rues/champignol.html" class="btn-decouvrir">Découvrez les rues en l'honneur des héros de la Seconde Guerre mondiale</a>
-                    </div>
-                    <div class="famille-info" id="info-smcreteil">
-                        <h3>Le quartier de Saint-Maur–Créteil</h3>
-                        <img src="images/smc.jpg" alt="Saint-Maur Créteil" class="famille-img">
-                        <p>Découvrez le quartier de Saint-Maur Créteil</p>
-                        <a href="rues/saint-maur-creteil.html" class="btn-decouvrir">Découvrez les rues en l'honneur des héros de la Seconde Guerre mondiale</a>
-                    </div>
-                    <div class="famille-info" id="info-adamville">
-                        <h3>Le quartier d’Adamville</h3>
-                        <img src="images/adamville.jpg" alt="Adamville" class="famille-img">
-                        <p>Découvrez le quartier d’Adamville</p>
-                        <a href="rues/adamville.html" class="btn-decouvrir">Découvrez les rues en l'honneur des héros de la Seconde Guerre mondiale</a>
-                    </div>
-                    <div class="famille-info" id="info-lapie">
-                        <h3>Le quartier de La Pie</h3>
-                        <img src="images/la-pie.jpg" alt="La Pie" class="famille-img">
-                        <p>Découvrez le quartier de La Pie</p>
-                        <a href="rues/la-pie.html" class="btn-decouvrir">Découvrez les rues en l'honneur des héros de la Seconde Guerre mondiale</a>
-                    </div>
-                    <div class="famille-info" id="info-lesmuriers">
-                        <h3>Le quartier des Mûriers</h3>
-                        <img src="images/les-muriers.jpg" alt="Les Mûriers" class="famille-img">
-                        <p>Découvrez le quartier des Mûriers</p>
-                        <a href="rues/les-muriers.html" class="btn-decouvrir">Découvrez les rues en l'honneur des héros de la Seconde Guerre mondiale</a>
+                    <div class="famille-info" id="info-rue-politzer">
+                        <h3>La Rue Politzer</h3>
+                        <img src="images/eglise.webp" alt="Rue Politzer" class="famille-img">
+                        <p>Découvrez la Rue Politzer</p>
+                        <a href="../rues/rue-politzer.html" class="btn-decouvrir">Découvrez la Rue Politzer</a>
                     </div>
                 </div>
             </div>
