v3, généralisation du zoom//dézoom

--- a/quartier/adamville.html
+++ b/quartier/adamville.html
@@ -34,6 +34,9 @@
                         <div class="marker-container" id="marker-container-carrefour-du-huit-mai-1945" data-family="carrefour-du-huit-mai-1945">
                             <img src="../images/marker.webp" alt="Marker Carrefour du Huit-Mai 1945" class="marker">
                         </div>
+                        <div class="marker-container" id="marker-container-avenue-et-place-charles-de-gaulle" data-family="avenue-et-place-charles-de-gaulle">
+                            <img src="../images/marker.webp" alt="Marker Avenue et Place Charles-de-Gaulle" class="marker">
+                        </div>
                     </div>
                     
                     <div class="famille-info" id="info-birhakeim">
@@ -60,6 +63,12 @@
                         <p>Découvrez le Carrefour du Huit-Mai 1945</p>
                         <a href="../rues/carrefour-du-huit-mai-1945.html" class="btn-decouvrir">Découvrez le Carrefour du Huit-Mai 1945</a>
                     </div>
+                    <div class="famille-info" id="info-avenue-et-place-charles-de-gaulle">
+                        <h3>l'Avenue et la Place Charles-de-Gaulle</h3>
+                        <img src="images/le-parc.webp" alt="Avenue et Place Charles-de-Gaulle" class="famille-img">
+                        <p>Découvrez l'Avenue et la Place Charles-de-Gaulle'</p>
+                        <a href="../rues/avenue-et-place-charles-de-gaulle.html" class="btn-decouvrir">Découvrez l'Avenue et la Place Charles-de-Gaulle</a>
+                    </div>
                 </div>
             </div>
         </section>
@@ -68,4 +77,5 @@
     </footer>
     <script src="../js/script.js"></script>
     <script src="../js/retour-quartier.js"></script>
+
 </html>
