--- a/quartier/vieux-saint-maur.html
+++ b/quartier/vieux-saint-maur.html
@@ -40,7 +40,7 @@
                         <h3>Avenue Gabriel Péri</h3>
                         <img src="images/eglise.webp" alt="Avenue Gabriel Péri" class="famille-info-img">
                         <p>Découvrez l'Avenue Gabriel Péri</p>
-                        <a href="../rues/avenue-gabriel-peri" class="btn-decouvrir">Découvrez l'Avenue Gabriel Péri</a>
+                        <a href="../rues/avenue-gabriel-peri.html" class="btn-decouvrir">Découvrez l'Avenue Gabriel Péri</a>
                     </div>
                 </div>
             </div>
