--- a/quartier/la-pie.html
+++ b/quartier/la-pie.html
@@ -28,6 +28,9 @@
                         <div class="marker-container" id="marker-container-boulevard-du-general-giraud" data-family="boulevard-du-general-giraud">
                             <img src="../images/marker.webp" alt="Marker Boulevard du Général-Giraud " class="marker">
                         </div>
+                        <div class="marker-container" id="marker-container-square-darromanches" data-family="square-darromanches">
+                            <img src="../images/marker.webp" alt="Marker Square d'Arromanches " class="marker">
+                        </div>
                     </div>
                     
                     <div class="famille-info" id="info-bayon">
@@ -38,9 +41,15 @@
                     </div>
                     <div class="famille-info" id="info-boulevard-du-general-giraud">
                         <h3>Le Boulevard du Général-Giraud </h3>
-                        <img src="images/eglise.webp" alt="Rue Bayon" class="famille-img">
+                        <img src="images/eglise.webp" alt="Boulevard du Général-Giraud" class="famille-img">
                         <p>Découvrez le Boulevard du Général-Giraud </p>
                         <a href="../rues/boulevard-du-general-giraud.html" class="btn-decouvrir">Découvrez le Boulevard du Général-Giraud </a>
+                    </div>
+                    <div class="famille-info" id="info-square-darromanches">
+                        <h3>Le Boulevard du Général-Giraud </h3>
+                        <img src="images/eglise.webp" alt="Square d'Arromanches" class="famille-img">
+                        <p>Découvrez le Square d'Arromanches </p>
+                        <a href="../rues/square-darromanches.html" class="btn-decouvrir">Découvrez le Square d'Arromanches </a>
                     </div>
                 </div>
             </div>
